# docs/openapi.json
@@ -511,18 +511,11 @@
             "maxLength": 255,
             "pattern": "^[A-Za-z0-9][A-Za-z0-9!#$&^_.+-]*/[A-Za-z0-9][A-Za-z0-9!#$&^_.+-]*$",
             "type": "string"
-          },
-          "dataBase64": {
-            "minLength": 4,
-            "maxLength": 25165824,
-            "pattern": "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$",
-            "type": "string"
           }
         },
         "required": [
           "path",
-          "mediaType",
-          "dataBase64"
+          "mediaType"
         ]
       }
     }
